# multicoin-light-client-ffi

./: CHANGELOG.md  Makefile  Package.swift  README.md  libpiratelc.podspec
releases/XCFramework/libpiratelc.xcframework/: Info.plist
releases/XCFramework/libpiratelc.xcframework/ios-arm64/libpiratelc.framework/Headers/: piratelc.h
releases/XCFramework/libpiratelc.xcframework/ios-arm64_x86_64-simulator/libpiratelc.framework/Modules/: module.modulemap
releases/XCFramework/libpiratelc.xcframework/macos-arm64_x86_64/libpiratelc.framework/Headers/: piratelc.h
releases/XCFramework/libzcashlc.xcframework/ios-arm64_x86_64-simulator/libzcashlc.framework/Headers/: zcashlc.h
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
